edu-user/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: edu-user-deployment
  namespace: edu-user
spec:
  replicas: 1
  selector:
    matchLabels:
      app: edu-user
  template:
    metadata:
      labels:
        app: edu-user
    spec:
      containers:
        - name: edu-user-app
          image: seongjaegreen/edu-user:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "250m"
              memory: "512Gi"
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 3
      imagePullSecrets:
        - name: dockerhub-secret
