edu-user/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: edu-user-ingress
  namespace: edu-user
spec:
  rules:
    - host: edu-user.211.254.214.68.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: edu-user-service
                port:
                  number: 80
